<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_temperature_management"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group7.piseas.TemperatureManagementActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/activityTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTempActivity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/text"
        />

    <TextView
        android:id="@+id/textView1"
        android:text="@string/curTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:textSize="18sp"
        android:layout_below="@+id/activityTitleTV"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/curTempTV"
        android:text="24°C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/SwitchColor"
        android:textStyle="normal|bold"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toEndOf="@+id/activityTitleTV" />

    <TextView
        android:id="@+id/textView5"
        android:text="@string/enableTempReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        android:layout_alignBottom="@+id/enableTempRegSW"
        android:layout_alignEnd="@+id/textView1" />

    <Switch
        android:id="@+id/enableTempRegSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/curTempTV"
        android:layout_alignStart="@+id/curTempTV"
        android:theme="@style/SwitchColor" />

    <Button
        android:id="@+id/updateTempRangeBTN"
        android:text="@string/setTempBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:onClick="onUpdateTempClick"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/removeTempRangeBTN"
        android:layout_alignStart="@+id/removeTempRangeBTN" />

    <Button
        android:id="@+id/removeTempRangeBTN"
        android:text="@string/removeTempBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRemoveTemperatureRangeClick"
        android:layout_below="@+id/updateTempRangeBTN"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_below="@+id/removeTempRangeBTN"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2" >

            <TextView
                android:text="@string/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:background="@drawable/table_header"
                android:textColor="#000000"
                android:textStyle="normal|bold"
                android:padding="5dp" />

            <TextView
                android:text="@string/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:background="@drawable/table_header"
                android:textColor="#000000"
                android:textStyle="normal|bold"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2" >

            <TextView
                android:id="@+id/minTempValTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/table_cell"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/maxTempValTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/table_cell"
                android:padding="5dp" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
