<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_light_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group7.piseas.LightEditActivity">

    <TextView
        android:id="@+id/title"
        style="@style/Title"
        android:layout_gravity="center_horizontal"
        android:text="@string/lightingSchedule"
        android:textColor="@color/text" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/timeon"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

        <NumberPicker
            android:id="@+id/picker_minute_on"
            android:layout_width="40dp"
            android:layout_height="125dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:descendantFocusability="blocksDescendants"
            />

        <NumberPicker
            android:id="@+id/picker_hour_on"
            android:layout_width="40dp"
            android:layout_height="125dp"
            android:layout_toStartOf="@+id/picker_minute_on"
            android:descendantFocusability="blocksDescendants"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@color/darkBlue"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/timeoff"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

        <NumberPicker
            android:id="@+id/picker_minute_off"
            android:layout_width="40dp"
            android:layout_height="125dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:descendantFocusability="blocksDescendants"
            />

        <NumberPicker
            android:id="@+id/picker_hour_off"
            android:layout_width="40dp"
            android:layout_height="125dp"
            android:layout_toStartOf="@+id/picker_minute_off"
            android:descendantFocusability="blocksDescendants"
            />

    </RelativeLayout>



    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        android:textSize="15sp"
        android:layout_gravity="bottom|center_horizontal"
        android:onClick="feedSave"/>

</LinearLayout>
