<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feeding_management_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="group7.piseas.FeedingManagementActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text"
        android:text="@string/feedSetting"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        style="@style/Title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <Switch
            android:id="@+id/autoLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_alignParentEnd="true"
            android:theme="@style/SwitchColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enableAutoFeed"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="0dp"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:paddingStart="0dp"
            android:paddingEnd="35dp"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btnManualFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/manualFeed"
        android:textSize="15sp"
        android:onClick="onManualFeed"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <ListView
            android:id="@+id/list_schedule"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"/>

        <ImageView
            android:id="@+id/imgAdd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/plus"
            android:onClick="addSchedule"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>


</LinearLayout>
