<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_light_managment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group7.piseas.LightManagementActivity">

    <TextView
        style="@style/Title"
        android:layout_gravity="center_horizontal"
        android:text="@string/lightingSetting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enableAutoLight"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="35dp"
            />
        <Switch
            android:id="@+id/autoLight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_weight="3"
            android:theme="@style/SwitchColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/manLight"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:paddingStart="0dp"
            android:paddingEnd="35dp"
            />
        <Switch
            android:id="@+id/manLight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:theme="@style/SwitchColor"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <ListView
            android:id="@+id/list_schedule_light"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"/>

        <ImageView
            android:id="@+id/imgAdd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/plus"
            android:onClick="addSchedule"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>

</LinearLayout>
