<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_temperature"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group7.piseas.TemperatureUpdateActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/activityTitleTV"
        style="@style/Title"
        android:text="@string/titleTempActivity"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textSize="18sp"
        android:layout_below="@+id/minTempSB"
        android:layout_alignEnd="@+id/textView1" />

    <SeekBar
        android:layout_below="@+id/textView1"
        android:id="@+id/minTempSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:max="20"
        android:thumbTint="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textView1"
        android:text="@string/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_below="@+id/activityTitleTV"
        android:layout_alignEnd="@+id/activityTitleTV"
        android:layout_marginEnd="22dp" />

    <TextView
        android:id="@+id/maxTempInputTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/maxTempSB"
        android:layout_alignStart="@+id/minTempInputTV"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/maxTempSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:max="20"
        android:thumbTint="@android:color/holo_red_dark" />

    <TableLayout
        android:id="@+id/tempTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="47dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_below="@+id/saveTempRangeBTN"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2" >

            <TextView
                android:text="@string/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:background="@drawable/table_header"
                android:textColor="#000000"
                android:textStyle="normal|bold"
                android:padding="5dp" />

            <TextView
                android:text="@string/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:background="@drawable/table_header"
                android:textColor="#000000"
                android:textStyle="normal|bold"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2" >

            <TextView
                android:id="@+id/minTempValTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/table_cell"
                android:padding="5dp" />

            <TextView
                android:id="@+id/maxTempValTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/table_cell"
                android:padding="5dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/saveTempRangeBTN"
        android:text="@string/saveTempRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSaveTemperatureRangeClick"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/maxTempSB"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/minTempInputTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="17dp"
        android:layout_above="@+id/minTempSB"
        android:layout_toEndOf="@+id/saveTempRangeBTN" />

</RelativeLayout>